--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 				<div class="container d-flex flex-column my-3">
 					<div class="d-flex flex-row">
 						<div class="col-6">
-							<h4 class="pt-3">JerryBee React app</h4>
+							<h4 class="pt-3">Bakery E-commerce React app</h4>
 							<p class="text-start mt-3 pe-3">
-								JerryBee. A React-based web application with API integration of the CRUD operations and responsive design, utilizing modern JavaScript techniques and DOM manipulation. Fixing broken links.
+								A React-based web application with API integration of the CRUD operations and responsive design, utilizing modern JavaScript techniques and DOM manipulation. Fixing broken links.
 							</p>
-							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success" target="_blank">View project on Render</a>
+							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
 						</div>
 						<div class="col-6 d-flex flex-column align-items-center">
 							<img src="./images/bakery-react.png" class="img_property shadow mb-3" alt="Bakery React App" title="Bakery React App">
@@ -133,7 +133,7 @@
 				<div class="container d-flex flex-column my-3">
 					<div class="d-flex flex-row">
 						<div class="col-6">
-							<h4 class="pt-3">JerryBee Custom RESTful API</h4>
+							<h4 class="pt-3">Bakery E-c Custom RESTful API</h4>
 							<p class="text-start mt-3 pe-3">
 								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on my personal ubuntu AWS EC2. Fixing broken links.
 							</p>
@@ -232,7 +232,7 @@
 					<div class="card card_size_2 border-0 mb-md-5 mb-3 shadow">
 						<img src="./images/bakery-react.png" class="card-img-top" alt="Bakery React App" title="Bakery React App">
 						<div class="card-body card_tool_bkg">
-							<p class="card-text">JerryBee. A React app for a bakery website that has user-friendly UI which has CRUD functionalities that integrates with its custom RESTful API.</p>
+							<p class="card-text">A React based e-commerce app for a bakery website that has user-friendly UI which has CRUD functionalities that integrates with its custom RESTful API.</p>
 							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
 						</div>
 					</div>
