Fixed projects title

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<div class="container d-flex flex-column my-3">
 					<div class="d-flex flex-row">
 						<div class="col-6">
-							<h4 class="pt-3">Bakery E-c Custom RESTful API</h4>
+							<h4 class="pt-3">Bakery E-commerce Custom RESTful API</h4>
 							<p class="text-start mt-3 pe-3">
 								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on my personal ubuntu AWS EC2. Fixing broken links.
 							</p>
