--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							<p class="text-start mt-3 pe-3">
 								A React-based web application with API integration of the CRUD operations and responsive design, utilizing modern JavaScript techniques and DOM manipulation. Fixing broken links.
 							</p>
-							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
+							<a href="http://ec2-47-129-52-62.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
 						</div>
 						<div class="col-6 d-flex flex-column align-items-center">
 							<img src="./images/bakery-react.png" class="img_property shadow mb-3" alt="Bakery React App" title="Bakery React App">
@@ -137,7 +137,7 @@
 							<p class="text-start mt-3 pe-3">
 								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on my personal ubuntu AWS EC2. Fixing broken links.
 							</p>
-							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com:4010/products/active" class="btn btn-success" target="_blank">View project on AWS EC2</a>
+							<a href="http://ec2-47-129-52-62.ap-southeast-1.compute.amazonaws.com/bakery/products/active" class="btn btn-success" target="_blank">View project on AWS EC2</a>
 							<a href="https://github.com/christotanes/bakery-api" class="btn btn-success" target="_blank">View project on GitHub</a>
 						</div>
 						<div class="col-6 d-flex flex-column align-items-center">
@@ -233,7 +233,7 @@
 						<img src="./images/bakery-react.png" class="card-img-top" alt="Bakery React App" title="Bakery React App">
 						<div class="card-body card_tool_bkg">
 							<p class="card-text">A React based e-commerce app for a bakery website that has user-friendly UI which has CRUD functionalities that integrates with its custom RESTful API.</p>
-							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
+							<a href="http://ec2-47-129-52-62.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
 						</div>
 					</div>
 					<!-- Project React, jerrybee end -->
@@ -243,7 +243,7 @@
 						<img src="./images/react-api-3.png" class="img-fluid shadow mb-3" alt="RESTful API" title="RESTful API">
 						<div class="card-body card_tool_bkg">
 							<p class="card-text">A custom built RESTful API that integrates with the Bakery React app was made with MongoDB, Express.js and Node.js. CRUD operations were made in the API. Thorough testing with error handling was done using Postman.</p>
-							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com:4010/products/active" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
+							<a href="http://ec2-47-129-52-62.ap-southeast-1.compute.amazonaws.com/bakery/products/active" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
 						</div>
 					</div>
 					<!-- Project API,jerrybee end -->
